platform/vaultwarden/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    kubernetes.io/metadata.name: vaultwarden
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
